--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,32 +64,31 @@ jobs:
           path: dist/*.zip
           retention-days: 7
 
-  build-macos-x64:
-    runs-on: macos-15-large  # Intel runner for native x64 build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build for macOS x64
-        run: npm run build && npx electron-builder --mac --x64 --publish never
-        env:
-          CSC_IDENTITY_AUTO_DISCOVERY: false
-
-      - name: Upload macOS x64 artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: macos-x64-build
-          path: dist/*.zip
-          retention-days: 7
+  # NOTE: macOS x64 build is temporarily disabled due to GitHub Actions billing requirements
+  # Intel macOS runners (macos-15-large) require paid plan
+  # Most modern Macs (2020+) are Apple Silicon (arm64), so arm64-only release is acceptable
+  # build-macos-x64:
+  #   runs-on: macos-15-large  # Intel runner for native x64 build
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
+  #     - name: Setup Node.js
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: '20'
+  #         cache: 'npm'
+  #     - name: Install dependencies
+  #       run: npm ci
+  #     - name: Build for macOS x64
+  #       run: npm run build && npx electron-builder --mac --x64 --publish never
+  #       env:
+  #         CSC_IDENTITY_AUTO_DISCOVERY: false
+  #     - name: Upload macOS x64 artifacts
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: macos-x64-build
+  #         path: dist/*.zip
+  #         retention-days: 7
 
   build-linux:
     runs-on: ubuntu-latest
@@ -119,7 +118,7 @@ jobs:
           retention-days: 7
 
   release:
-    needs: [build-windows, build-macos-arm64, build-macos-x64, build-linux]
+    needs: [build-windows, build-macos-arm64, build-linux]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v') || github.event_name == 'workflow_dispatch'
     permissions:
@@ -144,7 +143,6 @@ jobs:
           files: |
             artifacts/windows-build/*
             artifacts/macos-arm64-build/*
-            artifacts/macos-x64-build/*
             artifacts/linux-build/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
